@@ -24,6 +24,8 @@
 
 #include <tny-msg-receive-strategy.h>
 #include <tny-camel-bs-mime-part.h>
+#include <tny-msg.h>
+#include <tny-list.h>
 
 G_BEGIN_DECLS
 
@@ -33,6 +35,8 @@ G_BEGIN_DECLS
 #define TNY_IS_CAMEL_BS_MSG_RECEIVE_STRATEGY(obj)          (G_TYPE_CHECK_INSTANCE_TYPE ((obj), TNY_TYPE_CAMEL_BS_MSG_RECEIVE_STRATEGY))
 #define TNY_IS_CAMEL_BS_MSG_RECEIVE_STRATEGY_CLASS(vtable) (G_TYPE_CHECK_CLASS_TYPE ((vtable), TNY_TYPE_CAMEL_BS_MSG_RECEIVE_STRATEGY))
 #define TNY_CAMEL_BS_MSG_RECEIVE_STRATEGY_GET_CLASS(inst)  (G_TYPE_INSTANCE_GET_CLASS ((inst), TNY_TYPE_CAMEL_BS_MSG_RECEIVE_STRATEGY, TnyCamelBsMsgReceiveStrategyClass))
+
+typedef void (*TnyCamelBsMsgReceiveStrategyBodiesFilter) (TnyMsg *msg, TnyList *list);
 
 typedef struct _TnyCamelBsMsgReceiveStrategy TnyCamelBsMsgReceiveStrategy;
 typedef struct _TnyCamelBsMsgReceiveStrategyClass TnyCamelBsMsgReceiveStrategyClass;
@@ -53,6 +57,9 @@ struct _TnyCamelBsMsgReceiveStrategyClass
 
 GType tny_camel_bs_msg_receive_strategy_get_type (void);
 TnyMsgReceiveStrategy* tny_camel_bs_msg_receive_strategy_new (void);
+
+void tny_camel_bs_msg_receive_strategy_set_global_bodies_filter (TnyCamelBsMsgReceiveStrategyBodiesFilter filter);
+						     
 
 TnyStream * tny_camel_bs_msg_receive_strategy_start_receiving_part (TnyCamelBsMsgReceiveStrategy *self, TnyFolder *folder, TnyCamelBsMimePart *part, gboolean *binary, GError **err);
 
